replace test with build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ workflows:
       - test
       - notify-via-slack:
           requires:
-            - build
+            - test
           filters:
             branches:
               only:
