--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,8 +285,7 @@ workflows:
                 - master
       - deploy-to-aws-s3:
           requires:
-            - linting
-            - prettier
+            - terraform-plan-and-apply 
           filters:
             branches:
               only:
